# wow_unix

./: .gitignore  CMakeLists.txt  README.md  config.toml  fetch_mime_types.sh  mime_types.txt
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
cmake/: fetch_mime_types.cmake
cmake/modules/: FindCEF.cmake  FindFMOD.cmake
shaders/: sky_fragment.glsl  sky_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  ui_fragment.glsl  ui_vertex.glsl
src/: main.cpp  main_browser.cpp
src/audio/: audio_manager.cpp  audio_manager.hpp  fmod_utils.cpp  fmod_utils.hpp  zone_music_manager.cpp  zone_music_manager.hpp
src/config/: config_manager.cpp  config_manager.h
src/gl/: bindable_texture.h  index_buffer.cpp  index_buffer.h  mesh.cpp  mesh.h  program.cpp  program.h  shared_texture.cpp  shared_texture.h  stb_loader.cpp  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/io/: mpq_file.cpp  mpq_file.h  mpq_manager.cpp  mpq_manager.h
src/io/blp/: blp_file.cpp  blp_file.h
src/io/dbc/: dbc_file.h  dbc_manager.cpp  dbc_manager.h  dbc_structs.h
src/io/minimap/: minimap_loader_pool.cpp  minimap_loader_pool.h  minimap_provider.cpp  minimap_provider.h
src/io/terrain/: adt_chunk.cpp  adt_chunk.h  adt_tile.cpp  adt_tile.h  wdt_file.cpp  wdt_file.h
src/proto/: js_event.proto
src/proto/home/yanick/CLionProjects/wow-unix/src/proto/: browsefolderrequest.js  browsefolderresponse.js  initializerequest.js  jsevent.js
src/scene/: camera.cpp  camera.h  frustum.cpp  frustum.h  gpu_dispatcher.cpp  gpu_dispatcher.h  map_manager.cpp  map_manager.h  scene_info.h  sky_sphere.cpp  sky_sphere.h  texture_manager.cpp  texture_manager.h  world_frame.cpp  world_frame.h
src/scene/sky/: light_data.cpp  light_data.hpp  light_manager.cpp  light_manager.hpp  sky_sphere.cpp  sky_sphere.h
src/utils/: common_utils.hpp  constants.cpp  constants.h  di.cpp  di.h  dialog_utils.cpp  dialog_utils.h  io.cpp  io.h  log_utils.h  math.cpp  math.h  string_utils.cpp  string_utils.h  system_stats.cpp  system_stats.h  work_pool.cpp  work_pool.h
src/web/: app_scheme_handler.cpp  app_scheme_handler.h  ipc_message_handler.cpp  ipc_message_handler.h  lambda_task.h  web_application.cpp  web_application.h  web_client.cpp  web_client.h  web_core.cpp  web_core.h  web_dialog_handler.cpp  web_dialog_handler.h  windows_virtual_keys.h
src/web/event/: event_manager.cpp  event_manager.h  js_event.h  shell_events.cpp  shell_events.h  ui_event_system.cpp  ui_event_system.h
src/web/schemes/: app_scheme_handler.cpp  app_scheme_handler.h  blp_scheme_handler.cpp  blp_scheme_handler.h  minimap_scheme_handler.cpp  minimap_scheme_handler.h
ui/: README.md  angular.json  package-lock.json  package.json
ui/src/: styles.scss
ui/src/app/: app.config.ts  app.routes.ts  app.ts
ui/src/app/loading/: loading.component.html  loading.component.scss  loading.component.ts
ui/src/app/loading-screen/: loading-screen.component.html  loading-screen.component.scss  loading-screen.component.ts
ui/src/app/map-selection/: map-selection.component.html  map-selection.component.scss  map-selection.component.ts
ui/src/app/minimap-view/: minimap-view.html  minimap-view.scss  minimap-view.ts
ui/src/app/pipes/: locale-number.pipe.ts
ui/src/app/proto/: js_event.ts
ui/src/app/service/: cef-types.d.ts  event.service.ts  js-event.ts  loading-screen.service.ts  map-state.service.ts
ui/src/app/splash/: splash.component.html  splash.component.scss  splash.component.ts
ui/src/app/world-frame/: world-frame.html  world-frame.scss  world-frame.ts
